--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thinking will not overcome fear but action will."
+description: "人到中年，赚钱，认怂，回忆。"
 ---
 
 {% for post in paginator.posts %}
